--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -46,6 +46,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.uplifteducation.org/speech-language-pathologist-assistant-central-management-office/job/11784849'>Speech Language Pathologist Assistant: Central Management Office</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/UpliftEducation1/743999698517120-speech-language-pathologist-assistant-central-management-office'>Uplift Education Speech Language Pathologist Assistant: Central Management Office | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -58,7 +62,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HappinessHouse/743999698419024-speech-language-pathologist'>Happiness House Speech Language Pathologist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HappinessHouse/743999698419024-speech-language-pathologist'>Happiness House Speech Language Pathologist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -110,7 +114,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4496240002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4496240002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -345,7 +349,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/northwest-center/job/ozoibfwa'>Northwest Center Careers - Speech Language Pathologist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/northwest-center/job/ozoibfwa'>Northwest Center Careers - Speech Language Pathologist</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -353,7 +357,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">United States  Naples, FL</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ideapublicschools-english/job/onMUafwX'>IDEA Public Schools Careers - Speech Language Pathologist (Immediate Opening)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ideapublicschools-english/job/onMUafwX'>IDEA Public Schools Careers - Speech Language Pathologist (Immediate Opening)</a></h5> 
 <p><span class="badge badge-light">SAN ANTONIO, TEXAS</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -447,12 +451,8 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <p><span class="badge badge-light">Douglasville, GA</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/ctc/job/s8w7hf11xc9siz4an8sib9thdo'>Speech Language Pathologist | CTC Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/ctc/job/s8w7hf11xc9siz4an8sib9thdo'>Speech Language Pathologist | CTC Careers</a></h5> 
 <p><span class="badge badge-light">St. Augustine, FL</span></p>
-<p>Posted on: 2019-10-03</p>
-<hr/>
-<h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/speech-language-pathologist-prn-in-dekalb-county-dA8-ae5vGr6BHaaKiznY58'>Speech Language Pathologist - (PRN in Dekalb County) #1159 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
-<p><span class="badge badge-light">Atlanta, GAAtlanta, GA</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
 
